--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "sourceMap": true,
+    "noImplicitAny": false,
+    "allowJs": true,
     "baseUrl": ".",
     "types": [
       "webpack-env"
